Document VK credentials in env template

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@ BOT_TOKEN=change-me
 DATA_DIR=/workspace/NeuronDownloader/data
 POLL_INTERVAL_SECONDS=300
 COOKIES_FILE=
+VK_USERNAME=
+VK_PASSWORD=
+USER_AGENT=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36
+YOUTUBE_PLAYER_CLIENTS=android,web
 ADMIN_IDS=123456789
 REQUIRED_CHAT_IDS=
 MAX_CONCURRENT_DOWNLOADS=2
