Fix db initialization and env template

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,41 @@
-BOT_TOKEN=change-me
+# Telegram bot token
+BOT_TOKEN=
+
+# Data directory for downloads and SQLite database
 DATA_DIR=/workspace/NeuronDownloader/data
+DB_FILENAME=bot.db
+
+# Subscription polling interval (seconds)
 POLL_INTERVAL_SECONDS=300
-COOKIES_FILE=
-VK_USERNAME=
-VK_PASSWORD=
+
+# Cleanup settings
+CLEANUP_INTERVAL_SECONDS=600
+CLEANUP_MAX_AGE_SECONDS=18000
+
+# Downloader settings
+COOKIES_FILE=cookies.txt
 USER_AGENT=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36
-YOUTUBE_PLAYER_CLIENTS=android_creator
-ADMIN_IDS=123456789
+
+# Admin/user access
+ADMIN_IDS=
 REQUIRED_CHAT_IDS=
+
+# Download limits
 MAX_CONCURRENT_DOWNLOADS=2
+MAX_QUEUE_SIZE=20
+MAX_ACTIVE_TASKS_PER_USER=1
 FREE_DOWNLOAD_LIMIT=1
 FREE_DOWNLOAD_WINDOW_SECONDS=86400
+
+# Telegram API settings
+TELEGRAM_UPLOAD_TIMEOUT_SECONDS=600
+ENABLE_REACTIONS=true
+
+# VK credentials
+VK_USERNAME=
+VK_PASSWORD=
+
+# YouTube client settings
+YOUTUBE_PLAYER_CLIENTS=android,web
+YOUTUBE_JS_RUNTIME=
+YOUTUBE_JS_RUNTIME_PATH=
