Document all config env vars

--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,10 @@ FREE_DOWNLOAD_WINDOW_SECONDS=86400
 
 # Telegram API settings
 TELEGRAM_UPLOAD_TIMEOUT_SECONDS=600
+TELEBOT_LOG_LEVEL=CRITICAL
+TELEGRAM_POLLING_ERROR_DELAY_SECONDS=5
+TELEGRAM_POLLING_DNS_DELAY_SECONDS=30
+LOG_LEVEL=INFO
 ENABLE_REACTIONS=true
 
 # VK credentials
